--- a/web/package.json
+++ b/web/package.json
@@ -1,16 +1,13 @@
 {
-	"name": "prp-scoreboard",
-	"author": "Paradoxtended",
-	"version": "1.0.0",
-	"license": "",
-	"description": "",
+	"name": "web",
+	"private": true,
+	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-		"web:dev": "cd web && vite dev",
-		"build": "node scripts/build.js",
-		"watch": "node scripts/build.js --watch",
-		"format": "pnpm biome format --write",
-		"lint": "pnpm biome lint --write"
+		"dev": "vite",
+		"build": "tsc -b && vite build",
+		"lint": "eslint .",
+		"preview": "vite preview"
 	},
 	"keywords": [
 		"fivem"
@@ -21,10 +18,7 @@
 	},
 	"bugs": "https://github.com/paradoxtended/prp-scoreboard/issues",
 	"devDependencies": {
-		"@citizenfx/client": "latest",
-		"@citizenfx/server": "latest",
 		"@jgoz/esbuild-plugin-typecheck": "^4.0.3",
-		"@overextended/fx-utils": "^0.0.4",
 		"@types/node": "^22.13.9",
 		"@types/react": "^18.3.18",
 		"@types/react-dom": "^18.3.5",
@@ -38,9 +32,6 @@
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
-		"@biomejs/biome": "^1.9.4",
-		"@nativewrappers/fivem": "latest",
-		"@overextended/ox_lib": "latest",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
