finished player list..

--- a/web/package.json
+++ b/web/package.json
@@ -5,9 +5,10 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
-		"build": "tsc -b && vite build",
+		"build": "vite build",
 		"lint": "eslint .",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"reinstall": "rm -rf node_modules pnpm-lock.yaml && pnpm install"
 	},
 	"keywords": [
 		"fivem"
